--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <title>HEIMDALL</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets//images/heimdall.logo.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography">
+<body style="background: rgba(255, 215, 64, 0.8705882353);" class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
