--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body style="background: rgba(255, 215, 64, 0.8705882353);" class="mat-typography">
+<body style="background: rgb(31, 31, 31);" class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
